gcc/testsuite/g++.dg/template/operator6.C
// PR c++/27315
// { dg-do compile }

template void operator+; // { dg-error "15:declaration of .operator\\+. as non-function" }
